# atlas

./: .gitignore  ATLAS_CODEX_PLANNING_BRIEF.md  ATLAS_PYTHON_TO_RUST_MIGRATION_PLAN.md  CHANGELOG.md  Cargo.toml  LICENSE  MINIMAP_CODEX_PLANNING_BRIEF.md  MINIMAP_PYTHON_TO_RUST_MIGRATION_PLAN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.codex/: config.toml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
atlas/: __init__.py  android.py  cli.py  config.py  doctor.py  init_cmd.py  matching.py  models.py  normalization.py  observation.py  operations.py  redaction.py  routing.py  storage.py
crates/atlas-android/: Cargo.toml
crates/atlas-android/src/: lib.rs
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: main.rs
crates/atlas-cli/tests/: cli_contract.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: lib.rs
crates/atlas-graph/: Cargo.toml
crates/atlas-graph/src/: lib.rs
crates/atlas-repo/: Cargo.toml
crates/atlas-repo/src/: lib.rs
crates/atlas-schemas/: Cargo.toml
crates/atlas-schemas/src/: lib.rs
crates/atlas-test-support/: Cargo.toml
crates/minimap-android/: Cargo.toml
crates/minimap-cli/: Cargo.toml
crates/minimap-cli/src/: main.rs
crates/minimap-cli/tests/: cli_contract.rs
crates/minimap-core/: Cargo.toml
crates/minimap-core/src/: lib.rs
crates/minimap-graph/: Cargo.toml
crates/minimap-graph/src/: lib.rs
crates/minimap-repo/: Cargo.toml
crates/minimap-repo/src/: lib.rs
crates/minimap-schemas/: Cargo.toml
crates/minimap-schemas/src/: lib.rs
crates/minimap-test-support/: Cargo.toml
crates/minimap-test-support/src/: lib.rs
docs/: ATLAS_CONTRACT_INVENTORY.md  ATLAS_IMPLEMENTATION_PLAN.md  ATLAS_PYTHON_TO_RUST_MIGRATION_PLAN.md  MINIMAP_CONTRACT_INVENTORY.md  MINIMAP_IMPLEMENTATION_PLAN.md  RELEASING.md
packaging/homebrew/Formula/: minimap.rb.template
plugins/atlas-claude-code/.claude-plugin/: plugin.json
plugins/atlas-claude-code/skills/atlas-app-navigation/: SKILL.md
plugins/atlas-claude-code/skills/atlas-first-run-mapping/: SKILL.md
plugins/minimap-claude-code/.claude-plugin/: plugin.json
plugins/minimap-claude-code/skills/minimap-app-navigation/: SKILL.md
plugins/minimap-claude-code/skills/minimap-first-run-mapping/: SKILL.md
tests/: test_android_runtime.py  test_cli_commands.py  test_graph_core.py  test_init_doctor.py
