[workspace]
resolver = "2"
members = [
  "crates/atlas-cli",
  "crates/atlas-schemas",
  "crates/atlas-repo",
  "crates/atlas-graph",
  "crates/atlas-test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "git@github.com:himattm/atlas.git"
description = "Shared navigation memory and soft validation for AI agents working in Android codebases."

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
predicates = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
