[workspace]
resolver = "2"
members = [
  "crates/minimap-cli",
  "crates/minimap-android",
  "crates/minimap-core",
  "crates/minimap-schemas",
  "crates/minimap-repo",
  "crates/minimap-graph",
  "crates/minimap-test-support",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/himattm/minimap"
readme = "README.md"
description = "Shared navigation memory and soft validation for AI agents working in Android codebases."
keywords = ["android", "cli", "agents", "automation", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
predicates = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
