[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "atlas-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
atlas-graph = { path = "../atlas-graph" }
atlas-repo = { path = "../atlas-repo" }
atlas-schemas = { path = "../atlas-schemas" }
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
