[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
atlas-android = { version = "0.1.0", path = "../atlas-android" }
atlas-core = { version = "0.1.0", path = "../atlas-core" }
atlas-graph = { version = "0.1.0", path = "../atlas-graph" }
atlas-repo = { version = "0.1.0", path = "../atlas-repo" }
atlas-schemas = { version = "0.1.0", path = "../atlas-schemas" }
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
