[package]
name = "atlas-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
atlas-repo = { path = "../atlas-repo" }
atlas-schemas = { path = "../atlas-schemas" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
