[package]
name = "atlas-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
atlas-repo = { version = "0.1.0", path = "../atlas-repo" }
atlas-schemas = { version = "0.1.0", path = "../atlas-schemas" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
