[package]
name = "atlas-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
atlas-schemas = { path = "../atlas-schemas" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
