[package]
name = "minimap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "minimap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
minimap-android = { version = "0.1.3", path = "../minimap-android" }
minimap-core = { version = "0.1.3", path = "../minimap-core" }
minimap-graph = { version = "0.1.3", path = "../minimap-graph" }
minimap-repo = { version = "0.1.3", path = "../minimap-repo" }
minimap-schemas = { version = "0.1.3", path = "../minimap-schemas" }
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
