[package]
name = "minimap-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
minimap-repo = { version = "0.1.0", path = "../minimap-repo" }
minimap-schemas = { version = "0.1.0", path = "../minimap-schemas" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
