[package]
name = "minimap-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
minimap-schemas = { version = "0.1.3", path = "../minimap-schemas" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
